public class Weapon {
    public String name;
    public int type;
    public int hurt;

    public void attack() {
        System.out.println(this.name + " attack.");
    }
}
